--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -9,7 +9,6 @@ html {
 
 body {
   align-items: center;
-  background: config.$header-gradient;
   display: flex;
   justify-content: center;
 }
@@ -28,6 +27,10 @@ body {
 
   article {
     text-transform: lowercase;
+  }
+
+  @include config.dark-mode() {
+    background-color: rgba(10, 10, 10, 0.5);
   }
 }
 
